fixed scrollbar issue

--- a/src/components/Collapsible/Collapsible.scss
+++ b/src/components/Collapsible/Collapsible.scss
@@ -4,7 +4,7 @@
   transition: max-height 0.3s ease;
 }
 
-.wkp-collapsible-vertical::-webkit-scrollbar {
+.wkp-collapsible-hide-scrollbar::-webkit-scrollbar {
   display: none;
 }
 
